:recycle: refactor: admin dir code refactoring